Bug 160877 - Paragraph classification deleted after Print Preview or when opening file
Summary: Paragraph classification deleted after Print Preview or when opening file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Classification
  Show dependency treegraph
 
Reported: 2024-04-30 21:32 UTC by Olivier Hallot
Modified: 2024-06-19 09:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2024-04-30 21:32:31 UTC
Summary: After signing several paragraphs, print visualization remove all signatures.

Steps:
1) create a new text file
2) add text
3) Sign paragraph
4) Visualize printout
5) close visualization

Results: all paragraph signatures are gone

Expected results: all signatures maintained.

Similar issue when opening writer file

1) sign paragraph in a text files
2) save
3) close file
4) open file

Results: all paragraph signatures are gone

Expected results: all signatures preserved.


Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: pt-BR
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2024-05-16 01:52:52 UTC
Trying to clarify the summary, let me know if I got that wrong.
This is about paragraph _classification_ with: TSCP Classification toolbar > Manage Paragraph Classification > Choose a Classification > OK, which shows the corresponding Classification field at the beginning of the paragraph. Correct?
(It is _not_ about using the Sign Paragraph button in the same dialog.)

If that's the case, I can reproduce, both when saving-reloading, or using Print Preview: the fields are gone.

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 658a212585c56540a17c41111e6829716d4ef4e3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Stéphane Guillou (stragu) 2024-05-16 02:36:32 UTC
No repro in 6.2.0.3.

Bibisected with linux-64-6.3 repo to first bad build [c2ae5f9721d0d3b63c31fb3ba3cfa623caaf8af0] which points to:

commit 3750d0533e0e00941e5aef92fe5a26b6e7e27734
author	Ashod Nakashian	Mon Oct 01 07:56:14 2018 -0400
committer	Ashod Nakashian	Mon Dec 03 08:12:01 2018 +0100
sw: paragraph-sign: get graph-names only once
Reviewed-on: https://gerrit.libreoffice.org/63003

With steps:
1. Open Writer
2. Add paragraph
3. Manage Paragraph Classification > Classification: NB > OK
4. Open Print Preview, close Print Preview

Result: paragraph classification disappears.

Ash, can you please have a look?
Comment 3 Xisco Faulí 2024-06-05 14:21:03 UTC
My take: https://gerrit.libreoffice.org/c/core/+/168477
Comment 4 Commit Notification 2024-06-11 11:06:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac2db9b4726e92153a7be2ed0fd2987a7922caf0

tdf#160877: call lcl_getRDF since graph-names can change

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-11 13:56:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c90b99d74ee9e7438ffe3ceb36638b864d7deacf

tdf#160877: call lcl_getRDF since graph-names can change

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-19 09:46:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ce0e3f5ac90e580c21326993573bcc13fdebaae7

tdf#160877: call lcl_getRDF since graph-names can change

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.