tdf#160877: call lcl_getRDF since graph-names can change

partially revert 3750d0533e0e00941e5aef92fe5a26b6e7e27734
"sw: paragraph-sign: get graph-names only once"

Change-Id: I7f99679f4a361acdd841037b782421a53350dbbb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168477
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>